# C-_Training

./: .gitignore  Doxyfile  LICENSE  README.md
doc/: Software best practices.md  doxygenTemplates.txt
doc/algorithms/: 0_problemSolvingProcedure.txt
scripts/: document.sh  setup.sh
source/algorithms/src/: AlgorithmTypes.cpp  AlgorithmTypes.h  CMakeLists.txt
source/algorithms/src/leetCode/: CMakeLists.txt
source/algorithms/src/leetCode/problem1/: CMakeLists.txt  TwoSum.cpp  TwoSum.h
source/algorithms/src/leetCode/problem121/: BuyAndSellStock.cpp  BuyAndSellStock.h  CMakeLists.txt
source/algorithms/src/leetCode/problem125/: CMakeLists.txt  ValidPalindrome.cpp  ValidPalindrome.h
source/algorithms/src/leetCode/problem13/: RomanToInt.cpp  RomanToInt.h
source/algorithms/src/leetCode/problem141/: CMakeLists.txt  LinkedListCycle.cpp  LinkedListCycle.h
source/algorithms/src/leetCode/problem2/: AddTwoNumbers.cpp  AddTwoNumbers.h  CMakeLists.txt
source/algorithms/src/leetCode/problem20/: CMakeLists.txt  ValidParentheses.cpp  ValidParentheses.h
source/algorithms/src/leetCode/problem21/: CMakeLists.txt  MergeTwoSortedLists.cpp  MergeTwoSortedLists.h
source/algorithms/src/leetCode/problem226/: CMakeLists.txt  InvertBinaryTree.cpp  InvertBinaryTree.h
source/algorithms/src/leetCode/problem232/: CMakeLists.txt  ImplementQueueUsingStack.cpp  ImplementQueueUsingStack.h
source/algorithms/src/leetCode/problem242/: ValidAnagram.cpp  ValidAnagram.h
source/algorithms/src/leetCode/problem278/: CMakeLists.txt  FirstBadVersion.cpp  FirstBadVersion.h
source/algorithms/src/leetCode/problem3/: CMakeLists.txt  SubstringWoRepeat.cpp  SubstringWoRepeat.h
source/algorithms/src/leetCode/problem383/: CMakeLists.txt  RansomNote.cpp  RansomNote.h
source/algorithms/src/leetCode/problem4/: CMakeLists.txt  MedianTwoSortedArrays.cpp  MedianTwoSortedArrays.h
source/algorithms/src/leetCode/problem409/: CMakeLists.txt  LongestPalindrome.cpp  LongestPalindrome.h
source/algorithms/src/leetCode/problem5/: CMakeLists.txt  LongestPalindromicSubstring.cpp  LongestPalindromicSubstring.h
source/algorithms/src/leetCode/problem70/: CMakeLists.txt  ClimbingStairs.cpp  ClimbingStairs.h
source/algorithms/src/leetCode/problem704/: BinarySearch.cpp  BinarySearch.h  CMakeLists.txt
source/algorithms/src/leetCode/problem733/: CMakeLists.txt  FloodFill.cpp  FloodFill.h
source/algorithms/test/leetCode/: CMakeLists.txt  TestMain.cpp
source/algorithms/test/leetCode/problem1/: CMakeLists.txt  TwoSum-test.cpp
source/algorithms/test/leetCode/problem121/: BuyAndSellStock-test.cpp  CMakeLists.txt
source/algorithms/test/leetCode/problem125/: CMakeLists.txt  ValidPalindrome-test.cpp
source/algorithms/test/leetCode/problem13/: CMakeLists.txt  RomanToInt-test.cpp
source/algorithms/test/leetCode/problem141/: CMakeLists.txt  LinkedListCycle-test.cpp
source/algorithms/test/leetCode/problem2/: AddTwoNumbers-test.cpp  CMakeLists.txt
source/algorithms/test/leetCode/problem20/: CMakeLists.txt  ValidParentheses-test.cpp
source/algorithms/test/leetCode/problem21/: CMakeLists.txt  MergeTwoSortedLists-test.cpp
source/algorithms/test/leetCode/problem226/: CMakeLists.txt  InvertBinaryTree-test.cpp
source/algorithms/test/leetCode/problem278/: CMakeLists.txt  FirstBadVersion-test.cpp
source/algorithms/test/leetCode/problem3/: CMakeLists.txt  SubstringWoRepeat-test.cpp
source/algorithms/test/leetCode/problem4/: CMakeLists.txt  MedianTwoSortedArrays-test.cpp
source/algorithms/test/leetCode/problem5/: CMakeLists.txt  LongestPalindromicSubstring-test.cpp
source/algorithms/test/leetCode/problem70/: CMakeLists.txt  ClimbingStairs-test.cpp
source/algorithms/test/leetCode/problem704/: BinarySearch-test.cpp  CMakeLists.txt
source/basics/helloWorld/src/: CMakeLists.txt
source/basics/helloWorld/src/app/: CMakeLists.txt  pandasFirstApp.cpp
source/dataStructures/hashMap/src/: CMakeLists.txt
source/dataStructures/hashMap/src/app/: AppMain.cpp  CMakeLists.txt
source/dataStructures/hashMap/src/maps/: CMakeLists.txt  StaticMap.h  StaticNode.h
source/dataStructures/hashMap/src/maps/Joy2/: Joy2Bin.h  Joy2Map.cpp
source/dataStructures/hashMap/src/maps/PerfectHashMap/: PerfectHashNode.cpp  PerfectHashNode.h
source/dataStructures/hashMap/src/maps/Static/: StaticMap.h  StaticNode.h
source/dataStructures/hashMap/src/maps/UnorderedMap/: Hash.h
source/dataStructures/hashMap/src/test/: CMakeLists.txt
source/dataStructures/hashMap/src/test/maps/: CMakeLists.txt  StaticMap-test.cpp  StaticNode-test.cpp  UnorderedMap-test.cpp
source/dataStructures/src/trees/: BinaryNode.cpp  BinaryNode.h  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt
source/dataStructures/test/maps/: CMakeLists.txt  CMakeLists.txt_bak  Joy2Bin-test.cpp  Joy2Map-test.cpp  PerfectHashMap-test.cpp  PerfectHashNode-test.cpp  StaticNode-test.cpp
source/dataStructures/test/trees/: BinaryNode-test.cpp  CMakeLists.txt
source/network/src/serial/: CMakeLists.txt
source/network/src/tcp/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h
source/patterns/layeredArchitecture/src/: CMakeLists.txt
source/patterns/layeredArchitecture/src/app/: CMakeLists.txt
source/patterns/layeredArchitecture/src/business/: BusinessLogic.cpp  BusinessLogic.h
source/utilities/src/: CMakeLists.txt  ToDo.txt
source/utilities/src/enum/: BaseExtendableEnum.cpp  BaseExtendableEnum.h  CMakeLists.txt  ExtendableEnum.cpp  ExtendableEnum.h  ExtendableEnumLiteral.cpp  ExtendableEnumLiteral.h
source/utilities/src/error/: CMakeLists.txt  DerivedErrorTable.cpp  DerivedErrorTable.h  ErrorHandler.cpp  ErrorHandler.h  ErrorTable.cpp  ErrorTable.h  ExtendableError.cpp  ExtendableError.h  GenericError.cpp  GenericError.h
source/utilities/src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
source/utilities/test/: CMakeLists.txt  TestMain.cpp
source/utilities/test/enum_test/: CMakeLists.txt  ExtendableEnum-test.cpp  ExtendableEnumLiteral-test.cpp
source/utilities/test/error_test/: CMakeLists.txt  Error-test.cpp
(+572 files in other folders)
