# Compile each algorithm problem
add_subdirectory(problem1)
add_subdirectory(problem2)
add_subdirectory(problem3)
add_subdirectory(problem4)
add_subdirectory(problem5)
add_subdirectory(problem13)
add_subdirectory(problem20)
add_subdirectory(problem21)
add_subdirectory(problem121)
add_subdirectory(problem125)
add_subdirectory(problem141)
add_subdirectory(problem226)
add_subdirectory(problem242)
add_subdirectory(problem278)
add_subdirectory(problem704)
add_subdirectory(problem733)
